
This file shows the changes in recent releases of MODx. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#2563] Fixed chmod action on directories from File Tree
- [#2693] Properly sort country indicies to properly display in dropdowns
- [#2562] Added confirm dialog and success response for emptying recycle bin
- [#2634] Ensured context key is changed when changing parent of a Resource via Edit Resource page if context is different for new parent
- [#2631] Fixed issue when drag/dropping categories onto other categories in Element tree
- [#2659] Fixed issue where action buttons were overlapping tabs on edit pages
- [#2668] Fixed issue with FC rules and labels on checkbox/radio fields
- [#2582] Fixed bug with orm tree preventing attributes on the root node
- Fix bug in phpthumb allowing remote src parameters regardless of settings
- [#2555] Expose additional phpthumb options in System Settings
- [#2503] "Preview" inaccurately described viewing current page/site. Changed to "View".
- Fixed help message strings to correct URLs
- Fixed missing options array call in modRestClient, isArray call in modRestCurlClient
- [#2545] Added setting resource_tree_node_name to allow users to specify the field used for the node text on the Resource Tree
- [#2639] Prevent user from specifying a FC rule with Action of none
- [#2641] Fixed issue where template was reset incorrectly when canceled on template change
- Fixed issue where Permissions were being duplicated on setup due to relational db issue
- [#2646] Prevent removal/editing of default Administrator policy ACLs to prevent users from accidentally removing access to web context
- Added modAccessPolicyTemplate and modAccessPolicyTemplateGroup for easier managing and editing of Access Policies, including a UI for managing Access Policy Templates
- [#2483] Auto-generate alias when duplicating a Resource